# dotfiles

./: .apt  .brew  .env.example  .gitignore  .makelinks  .markdownlint-cli2.yaml  .sync  .sync-lib.sh  .sync-with-rollback  .vars  .zprofile  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  STRIP-LIST.md  gitattributes  gitconfig  justfile  milknado.toml  packages.yaml  pr-metadata.json  prek.toml  tmux-upgrade-plans.md  tmux.conf  vimrc  zshenv  zshrc
agent-profile/: .gitignore  AGENTS.md  ap  pyproject.toml
agent-profile/agent_profile/: __init__.py  __main__.py  _validate.py  apply_compiled.py  cli.py  compile_command.py  compile_target_presence.py  compile_target_validation.py  compiled_types.py  discover.py  drift.py  env.py  fetch.py  fetch_sources_command.py  harness_field_coverage.py  ingest.py  install_command.py  manifest.py  merged_settings_preservation.py  overlay.py  parse.py  permissions.py  shared.py  skill_agents.txt  templating.py
agent-profile/lib/: agents_md.sh  commands.sh  discover.sh  manifest.sh  parse.sh  shared_writer.sh
agent-profile/renderers/: claude.sh  codex.sh  copilot.sh  cursor.sh  opencode.sh
agent-profile/tests/: compile_fixtures.py  conftest.py  test_agents_md.py  test_apply_compiled.py  test_canonical_permissions.py  test_claude_legacy_hook_cleanup.py  test_claude_native_plugins.py  test_cli.py  test_codex_legacy_hook_cleanup.py  test_compile_apply_preservation.py  test_compile_command.py  test_compile_drift_wiring.py  test_compile_generated_discriminator.py  test_compile_idempotency.py  test_compile_target_presence.py  test_core.py  (+32 more)
(+1105 files in other folders)
