[project]
name = "agent-profile"
version = "0.1.0"
description = "Harness-agnostic agent profile renderer (Python port of the ap bash CLI)"
requires-python = ">=3.11"
dependencies = [
    "tomlkit>=0.13",
    "PyYAML>=6.0",
]

[project.scripts]
ap = "agent_profile.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_profile"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
